<resources>
    <string name="app_name">MyRobot</string>
    <string name="stringRobotin">Robotin picture</string>
    <string name="stringRed">Color</string>
    <string name="stringBlue">Blue</string>
    <string name="stringGreen">Green</string>
    <string name="stringText">LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO LA PARASTE DE PECHITO LOCOOOO</string>
</resources>
